@@ -22,8 +22,6 @@ PyAPI_DATA(PyTypeObject) PyRange_Type;
 
 #define PyRange_Check(op) ((op)->ob_type == &PyRange_Type)
 
-PyAPI_FUNC(PyObject *) PyRange_New(long, long, long, int);
-
 #ifdef __cplusplus
 }
 #endif
